istio/httpserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-server
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: http-metrics
      labels:
        app: http-server
    spec:
      containers:
        - name: http-server
          image: qzcai/http-server:v3.0
          ports:
            - containerPort: 8080
              name: http-metrics
---
apiVersion: v1
kind: Service
metadata:
  name: http-server-service
spec:
  selector:
    app: http-server
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
