istio/istio-specs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: httpserver
spec:
  gateways:
    - httpsserver
  hosts:
    - cncamp.com
  http:
    - match:
        - uri:
            prefix: "/nginx"
      rewrite:
        uri: "/"
      route:
        - destination:
            host: nginx.demo.svc.cluster.local
            port:
              number: 80
    - match:
        - uri:
            prefix: "/service/"
        - uri:
            prefix: "/service"
      rewrite:
        uri: "/"
      route:
        - destination:
            host: http-server-service.demo.svc.cluster.local
            port:
              number: 80
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: httpsserver
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - cncamp.com
      port:
        name: https-default
        number: 443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: cncamp-tls
